--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/d3": "^7.4.3",
+    "d3": "^7.9.0",
     "graphviz-wasm": "^3.0.0",
     "next": "15.3.4",
     "react": "^19.0.0",
