--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-zoom-pan-pinch": "^3.7.0",
     "tailwind-merge": "^3.3.1",
     "ts-graphviz": "^2.1.6"
   },
